demo/sass/css/demo.css
/* ... */
.text-left, .tal {
  text-align: left;
}

.text-right, .tar {
  text-align: right;
}

.vertical-align-top, .vat {
  vertical-align: top;
}

.vertical-align-middle, .vam {
  vertical-align: middle;
}

.vertical-align-bottom, .vab {
  vertical-align: bottom;
}

.justify {
  text-align: justify;
}

.caps {
  text-transform: uppercase;
}

.no-margin {
  margin: 0 !important;
}

.no-margin-top {
  margin-top: 0 !important;
}

.no-margin-bottom {
  margin-bottom: 0 !important;
}

.no-margin-left {
  margin-left: 0 !important;
}

.no-margin-right {
  margin-right: 0 !important;
}

.no-margin-horizontal {
  margin-right: 0 !important;
  margin-left: 0 !important;
}

.no-margin-vertical {
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}

.no-padding {
  padding: 0 !important;
}

.no-padding-top {
  padding-top: 0 !important;
}

.no-padding-bottom {
  padding-bottom: 0 !important;
}

.no-padding-left {
  padding-left: 0 !important;
}

.no-padding-right {
  padding-right: 0 !important;
}

.no-padding-horizontal {
  padding-right: 0 !important;
  padding-left: 0 !important;
}

.no-padding-vertical {
  padding-top: 0 !important;
  padding-bottom: 0 !important;
}

.hidden {
  display: none !important;
  visibility: hidden !important;
}

.overflow-hidden, .ofh {
  overflow: hidden;
}

.float-right, .fr {
  float: right;
}

.float-left, .fl {
  float: left;
}

.float-none, .fn {
  float: none;
}

.no-max-width {
  max-width: none !important;
}

.full-width {
  width: 100%;
}

html {
  box-sizing: border-box;
  line-height: 1.4;
}

*, *:before, *:after {
  box-sizing: inherit;
}

img {
  max-width: 100%;
}

body.offsetopened {
  overflow-x: hidden;
}

.toolbox button, .toolbox .button {
  position: relative;
  box-sizing: border-box;
  border: 2px solid transparent;
  color: #fff;
  padding: 0.75em 2em;
  margin: 0.25em 0.25em 0.25em 0;
  outline: none;
  transition: all 0.15s;
}
.toolbox button.blue, .toolbox .button.blue {
  background-color: #1570a6;
}
.toolbox button.blue:hover, .toolbox button.blue:focus, .toolbox .button.blue:hover, .toolbox .button.blue:focus {
  border: 2px solid #072435;
}
.toolbox button.blue:active, .toolbox button.blue:active, .toolbox .button.blue:active, .toolbox .button.blue:active {
  background-color: #0c4262;
}
.toolbox button.green, .toolbox .button.green {
  background-color: #107c10;
}
.toolbox button.green:hover, .toolbox button.green:focus, .toolbox .button.green:hover, .toolbox .button.green:focus {
  border: 2px solid #010b01;
}
.toolbox button.green:active, .toolbox button.green:active, .toolbox .button.green:active, .toolbox .button.green:active {
  background-color: #073807;
}
.toolbox button.pink, .toolbox .button.pink {
  background-color: #ef0060;
}
.toolbox button.pink:hover, .toolbox button.pink:focus, .toolbox .button.pink:hover, .toolbox .button.pink:focus {
  border: 2px solid #6f002d;
}
.toolbox button.pink:active, .toolbox button.pink:active, .toolbox .button.pink:active, .toolbox .button.pink:active {
  background-color: #a30041;
}

.toolbox {
  text-align: center;
}

.page {
  background-color: #FFF;
  padding-bottom: 1em;
  position: relative;
}
.page.offset-docked {
  left: auto !important;
  margin-left: 20%;
  overflow: hidden;
  right: auto;
}

.msdotcomoffsetmenu {
  background-color: #333333;
  height: 100vh;
  left: 0;
  overflow-y: auto;
  position: fixed;
  top: 0;
  width: 18em;
  transition: width 0.3s linear;
}
.msdotcomoffsetmenu.offset-docked {
  width: 20%;
}
.msdotcomoffsetmenu ul {
  list-style: none;
  margin: 0;
  padding-left: 0;
}
.msdotcomoffsetmenu .offset-menu-link {
  background-color: transparent;
  border: none;
  color: #FFF;
  cursor: pointer;
  display: block;
  padding: 1em;
  text-align: left;
  text-decoration: none;
  white-space: normal;
  width: 100%;
}
.msdotcomoffsetmenu .offset-menu-link:hover, .msdotcomoffsetmenu .offset-menu-link:focus {
  background-color: #EEE;
  color: #333;
}

.offset-menu-button {
  background-color: #eee;
  border: none;
  cursor: pointer;
  display: inline-block;
  padding: 1em;
  position: fixed;
  top: 0;
  z-index: 1;
}
.offset-menu-button:hover, .offset-menu-button:focus {
  background-color: #333;
}
.offset-menu-button:hover .menu-icon rect, .offset-menu-button:focus .menu-icon rect {
  fill: #FFF;
}
.offset-menu-button .menu-icon {
  width: 2.5em;
}

@media all and (max-width: 768px) {
  .dock-button {
    display: none;
  }

  .msdotcomoffsetmenu {
    width: 12em;
  }
}
.ms-grid, .ms-row, [class*="col-"] {
  box-sizing: border-box;
}

.ms-grid {
  display: block;
  position: relative;
  width: 92.5%;
  margin-left: auto;
  margin-right: auto;
  max-width: 1600px;
  padding-left: 1em;
  padding-left: 1vw;
  padding-right: 1em;
  padding-right: 1vw;
}
.ms-grid.full {
  width: 100%;
  max-width: none;
}
.ms-grid.full.zero-margin {
  padding-left: 0;
  padding-right: 0;
}
.ms-grid.fixed {
  padding-left: 2px;
  padding-right: 2px;
}
.ms-grid.fixed .ms-row {
  margin-left: 2px;
  margin-right: 2px;
}
.ms-grid.fixed .ms-row > [class*="col-"] {
  padding-left: 2px;
  padding-right: 2px;
}
.ms-grid.zero-margin {
  padding-left: 0;
  padding-right: 0;
}
.ms-grid.zero-margin .ms-row {
  margin-left: 0;
  margin-right: 0;
}
.ms-grid.zero-margin .ms-row > [class*="col-"] {
  padding-left: 0;
  padding-right: 0;
}
.ms-grid .ms-row {
  display: flex;
  flex-wrap: wrap;
  margin-left: -1em;
  margin-right: -1em;
  margin-left: -1vw;
  margin-right: -1vw;
}
.ms-grid .ms-row.content-flush {
  margin-left: -2em;
  margin-right: -2em;
  margin-left: -2vw;
  margin-right: -2vw;
}
.ms-grid .ms-row:after,
.ms-grid [class*="col-"]:after {
  content: "";
  display: table;
  clear: both;
}

[class*="col-"] {
  align-items: stretch;
  float: left;
  width: 100%;
  position: relative;
  margin: 0;
  padding-left: 1em;
  padding-right: 1em;
  padding-left: 1vw;
  padding-right: 1vw;
}
[class*="col-"].centered {
  float: none;
  margin-left: auto;
  margin-right: auto;
}
/* ... */

